# pytorch-course

./: .gitignore  README.md  pyproject.toml
pytorch_course/: 00_pytorch_fundamentals.ipynb  01_pytorch_workflow.ipynb  02_pytorch_classification.ipynb
