[tool.poetry]
name = "pytorch-course"
version = "0.1.0"
description = ""
authors = ["Josh Ackland <joshackland@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
torch = "^2.2.2"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.2"
requests = "^2.31.0"
torchvision = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
